#78882: Replace usage of ErrorManager for logging in ide cluster