@@ -49,9 +49,13 @@ import java.io.IOException;
 import java.net.URL;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.logging.Logger;
+import java.util.logging.Level;
+
 import org.netbeans.api.java.classpath.ClassPath;
+import org.netbeans.modules.java.source.indexing.JavaIndex;
 import org.netbeans.modules.java.source.parsing.FileObjects;
-import org.netbeans.modules.java.source.usages.Index;
+import org.netbeans.modules.parsing.impl.indexing.PathRegistry;
 import org.netbeans.spi.java.classpath.ClassPathFactory;
 import org.netbeans.spi.java.classpath.ClassPathImplementation;
 import org.netbeans.spi.java.classpath.PathResourceImplementation;
@@ -70,6 +74,7 @@ import org.openide.util.WeakListeners;
 public class CacheClassPath implements ClassPathImplementation, PropertyChangeListener {
     
     public static final boolean KEEP_JARS = Boolean.getBoolean("CacheClassPath.keepJars");     //NOI18N
+    private static Logger log = Logger.getLogger(CacheClassPath.class.getName());
     
     private final ClassPath cp;    
     private final boolean translate;
@@ -113,12 +118,12 @@ public class CacheClassPath implements ClassPathImplementation, PropertyChangeLi
         }        
         final List<ClassPath.Entry> entries = this.cp.entries();
         final List<PathResourceImplementation> _cache = new LinkedList<PathResourceImplementation> ();            
-        final GlobalSourcePath gsp = GlobalSourcePath.getDefault();
+        final PathRegistry preg = PathRegistry.getDefault();
         for (ClassPath.Entry entry : entries) {
             URL url = entry.getURL();
             URL[] sourceUrls;
             if (translate) {
-                sourceUrls = gsp.getSourceRootForBinaryRoot(url, this.cp, true);
+                sourceUrls = preg.sourceForBinaryQuery(url, this.cp, true);
             }
             else {        
                 sourceUrls = new URL[] {url};
@@ -126,14 +131,15 @@ public class CacheClassPath implements ClassPathImplementation, PropertyChangeLi
             if (sourceUrls != null) {
                 for (URL sourceUrl : sourceUrls) {
                     try {
-                        File cacheFolder = Index.getClassFolder(sourceUrl);
+                        File cacheFolder = JavaIndex.getClassFolder(sourceUrl);
                         URL cacheUrl = cacheFolder.toURI().toURL();
                         if (!cacheFolder.exists()) {                                
                             cacheUrl = new URL (cacheUrl.toExternalForm()+"/");     //NOI18N
                         }
                         _cache.add(ClassPathSupport.createResource(cacheUrl));
                     } catch (IOException ioe) {
-                        ErrorManager.getDefault().notify(ioe);
+                        if (log.isLoggable(Level.SEVERE))
+                            log.log(Level.SEVERE, ioe.getMessage(), ioe);
                     }
                 }
                 if (KEEP_JARS && translate) {
@@ -162,8 +168,16 @@ public class CacheClassPath implements ClassPathImplementation, PropertyChangeLi
                     }
                 }
                 try {
-                    File sigs = Index.getClassFolder(url);
-                    _cache.add (ClassPathSupport.createResource(sigs.toURI().toURL()));
+                    File sigs = JavaIndex.getClassFolder(url);
+                    URL orl = sigs.toURI ().toURL ();
+                    if (sigs.isDirectory ()) {
+                        // #155742 - URL for folder must always end with slash
+                        if (!orl.toExternalForm ().endsWith("/")) {
+                            //TODO: string concatenation
+                            orl = new URL(orl.toExternalForm () + "/");
+                        }
+                    }
+                    _cache.add (ClassPathSupport.createResource(orl));
                 } catch (IOException ioe) {
                     Exceptions.printStackTrace(ioe);
                 }
